test/Fail/LocalVsImportedModuleClash.agda
module LocalVsImportedModuleClash where

X = TODO--This-shouldn't-happen-if-the-scope-checker-does-it's-job

